[DevTools] intrumented webgl error with synchronous breakpoint

Most of the time we use webgl error breakpoint to set breakpoint at
webgl call which produces opengl warning or error. Asynchronous break
at next JavaScript execution is not useful here.

R=dgozman@chromium.org

Bug: chromium:800835
Change-Id: Ief8670a22ceff51e6cb7b55f47a403a7f6a52959
Reviewed-on: https://chromium-review.googlesource.com/879073
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Aleksey Kozyatinskiy <kozyatinskiy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531305}
Former-commit-id: eb285d38cee06746e129bd0a661093ace2ed921a