third_party/WebKit/LayoutTests/inspector-protocol/debugger/domdebugger-webgl-breakpoint.js
@@ -1,0 +1,18 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+(async function(testRunner) {
+  var {page, session, dp} = await testRunner.startHTML('<canvas id="cvn"></div>', 'Tests instrumentation breakpoint on webgl error');
+
+  dp.Debugger.enable();
+  dp.DOMDebugger.enable();
+  dp.DOMDebugger.setInstrumentationBreakpoint({eventName: 'webglErrorFired'});
+  dp.Runtime.evaluate({expression: `
+    var canvas = document.getElementById("cvn");
+    var gl = canvas.getContext("experimental-webgl");
+    gl.drawArrays(gl.TRIANGLES, 0, 6);
+    //# sourceURL=test.js`});
+  const {params:{callFrames, data, reason}} = await dp.Debugger.oncePaused();
+  testRunner.logCallFrames(callFrames);
+  testRunner.log(data);
+  testRunner.log(reason);
+  testRunner.completeTest();
+})
